# udfs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  h origin --delete nws-hazards  pyproject.toml  tags.yaml
.github/workflows/: test.yml
Addresscloud_Energy_Ratings/: Addresscloud_Energy_Ratings.py  meta.json
Census_ACS_5yr_copy/: meta.json  utils.py
DuckDB_H3_SF/: DuckDB_H3_SF.py  meta.json
EC_Greenwich_Village/: EC_Greenwich_Village.py  meta.json
FEMA_Buildings_US/: README.MD
LULC_Tile_Example_copy/: meta.json  utils.py
NLCD_Tile_Example/: NLCD_Tile_Example.py  README.MD  meta.json  utils.py
Overture_Maps_Example_copy/: Overture_Maps_Example_copy.py  README.MD  utils.py
Preview_Parquet/: Preview_Parquet.py  meta.json
Zarr_file_example_copy/: README.MD  meta.json
archive/Arraylake_Example/: arraylake_example.py  meta.json
archive/Batch_Job/: Batch_Job.py  meta.json
archive/Compute_TWI/: Compute_TWI.py  meta.json
archive/Coverage_model_ibis/: meta.json
archive/DC_AOI_Tile_manual_fixing/: DC_AOI_Tile_manual_fixing.py  README.MD
archive/Fire_Proximity_Buffer/: README.MD
archive/Five_Minutes_Away_in_Bushwick_Brooklyn/: meta.json  (+1 more)
llms/: AskChartPrompt.txt  AskCodePrompt.txt  AskTextPrompt.txt  BuildChartPrompt.txt  BuildCodePrompt.txt  BuildTextPrompt.txt  DemoData.txt  FusedsystemPrompt.txt  NewFusedSystemPrompt.txt
ops/: common.py  join.py  raster.py  vector.py
tests/: conftest.py  file_udf_helpers.py  test_file_udfs.py  test_public_udfs.py  test_utils.py
turquoise_bison_1231_312_99_312_123/: meta.json
(+2192 files in other folders)
