[project]
name = "udfs"
version = "0.1.0"
description = "This repo is a public collection of Fused User Defined Functions (UDFs)."
authors = []
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = ["fused[batch] (>=1.14.2,<2.0.0)", "pytest (>=8.3.5,<9.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
